--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                 <artifactId>wildfly-maven-plugin</artifactId>
                 <version>1.2.1.Final</version>
                 <configuration>
-                    <name>infoShareAcademy.war</name>
+                    <name>homework.war</name>
                 </configuration>
                 <executions>
                     <execution>
